Remove inferred tables from SQLite database